# Helheim-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: lint_and_msbuild.yml  msbuild.yml
Engine/: Engine.sln
Engine/Game/: (âeó  ExplosiveEnemyTest.scn  Simple.json  config.txt  imgui.ini  projectSettings.json  projectSettings.txt  text.txt  ÌÌÌÌÌÌÌÌ  ÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌÌ  ﾌﾌﾌﾌﾌﾌﾌﾌ  ﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌﾌ
Engine/Game/Assets/IBL/: HDRI_PurpleSkybox.hdr.emeta  HDR_subdued_blue_nebulae.hdr.emeta  lonely_road_afternoon_4k.hdr.emeta  rural_asphalt_road_4k.hdr.emeta  scifi cave.hdr  scifi cave.hdr.emeta  scifi enviroment.hdr  scifi enviroment.hdr.emeta  skybox.hdr.emeta
Engine/Game/Assets/Materials/: Alarm On.mat  Alarm On.mat.emeta  BOSS-PHASE-1.mat  BOSS-PHASE-1.mat.emeta  BOSS-PHASE-2.mat  BOSS-PHASE-2.mat.emeta  BOSS-PHASE-3.mat  BOSS-PHASE-3.mat.emeta  Door Locked.mat  Door Locked.mat.emeta  Door Open.mat  Door Open.mat.emeta  Door Panel Locked.mat  Door Panel Locked.mat.emeta  Door Panel Open.mat  Door Panel Open.mat.emeta  Emissive 2.mat  Emissive 2.mat.emeta  Emissive 3.mat  Emissive 3.mat.emeta  Emissive.mat  Emissive.mat.emeta  Locked.mat  Locked.mat.emeta  Pod Material.mat  Pod Material.mat.emeta  Security panel.mat  Security panel.mat.emeta  (+72 more)
Engine/Game/InternalAssets/: default_imgui.ini
Engine/Game/Shaders/: PBR_VertexShader.glsl  Shader_PS.glsl  Shader_VS.glsl  Vertex.vs  basic.vs  hello_world.fs
Engine/Game/Shaders definitivos/: Shader_PS.glsl  Shader_VS.glsl
Engine/Game/shaders/: default_fragment.glsl  default_vertex.glsl
Engine/Scripting/: ActiveBattleAreaController.cpp  ActiveBattleAreaController.h  AimState.cpp  AimState.h  AreaDoors.cpp  AttackState.cpp  AttackState.h  AudioManager.cpp  AudioManager.h  AudioTester.cpp  AudioTester.h  Bat.cpp  BattleArea.cpp  BattleArea.h  BombBoss.cpp  BombBoss.h  BossBattleArea.cpp  BossLaser.cpp  BossLaserEyeBall.cpp  BossLaserEyeBall.h  Bullet.cpp  BulletEnemy.cpp  CinematicAnimation.cpp  CinematicCamera.cpp  Dash.cpp  Dash.h  DashState.cpp  DashState.h  Dialog.cpp  ElectricTrapController.cpp  ElectricTrapController.h  ElectricTrapGroupController.cpp  Enemy.cpp  EnemyBase.cpp  EnemyBoss.cpp  EnemyBoss.h  EnemyCreatureMelee.cpp  EnemyCreatureRange.cpp  EnemyExplosive.cpp  EnemyExplosiveSpawner.cpp  (+95 more)
Engine/Scripting/Output/: Scripting.exp  Scripting.lib
Engine/Source/: AIAGentComponent.cpp  AIAGentComponent.h  AboutPanel.cpp  AboutPanel.h  AgentProfile.cpp  AgentProfile.h  AnimationClip.cpp  AnimationClip.h  AnimationComponent.cpp  AnimationComponent.h  AnimationController.cpp  AnimationController.h  AnimationSMPanel.cpp  AnimationSMPanel.h  AnimationState.cpp  AnimationState.h  AnimationStateMachine.cpp  AnimationStateMachine.h  AnimationTransition.cpp  AnimationTransition.h  Application.cpp  Application.h  Archive.cpp  Archive.h  AudioListenerComponent.cpp  AudioListenerComponent.h  AudioSourceComponent.cpp  AudioSourceComponent.h  AudioSourceComponentNew.cpp  AudioSourceComponentNew.h  AudioUnit.cpp  AudioUnit.h  BatchManager.cpp  BatchManager.h  BezierCurve.cpp  BezierCurve.h  BlendMode.cpp  BlendMode.h  BoxColliderComponent.cpp  BoxColliderComponent.h  (+295 more)
Engine/Source/CoreLib/: CoreLib.vcxproj  CoreLib.vcxproj.filters
Engine/enc_temp_folder/3653862fea05783d19c42fb1a74a2c5/: GameObject.cpp
Engine/enc_temp_folder/38a95a565547eb5a28acc1927fc/: ModuleEngineCamera.cpp
Engine/enc_temp_folder/414a63f6a329ae34bab3c7b719e9622/: DashState.cpp
Licenses/MathGeoLib/: LICENSE
Licenses/cr.h/: cr_h.txt
(+2970 files in other folders)
